# Kernel-Modules-Control

./: .gitignore  App  CMakeLists.txt  Compile.sh  Kmc  README.md  Run.sh  cmake_install.cmake
Headers/: GtkMethod.h  HelperFunction.h  MainWindow.h
Src/: GtkMethod.c  HelperFunction.c  Main.c  MainWindow.c
Ui/: MainWindow.glade  MainWindow.glade~  ModulesRow.glade  ModulesRow.glade~  TEST.glade
Ui/Css/: MainWindow.css
